ops/k8s/overlays/sit/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  rules:
    - host: sit-api.orderonline.com
