ops/k8s/overlays/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: sit
  annotations:
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: sit-api.orderonline.com
      http:
        paths:
          - path: /orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /inventory(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 80
          - path: /payment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 80
